--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>Sobre</h2>
-          <p>Olá meu nome é João Víctor trabalho na área de Ti há alguns anos mas sempre gostei de progamação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
+          <p>Olá meu nome é João Víctor trabalho na área de Ti há alguns anos mas sempre gostei de programação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
         </div>
 
         <div class="row">
@@ -97,10 +97,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Data de Nascimento:</strong> <span>13 Março 1998</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Data de Nascimento:</strong> <span>11 Março 1998</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://borjao.github.io/Meu-site/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 61986511913</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Brásilia, DF.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Brasília, DF.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -256,7 +256,7 @@
             <div class="resume-item">
               <h4>Análise e desenvolvimento de sistemas.</h4>
               <h5>2021 - Até o presente momento</h5>
-              <p><em>Estácio, Brásilia.</em></p>
+              <p><em>Estácio, Brasília.</em></p>
               <p>Análise de sistemas é a atividade que tem como finalidade a realização de estudos de processos a fim de encontrar o melhor caminho racional para que a informação possa ser processada. Os analistas de sistemas estudam os diversos sistemas existentes entre hardwares, softwares e o usuário final.</p>
             </div>
             <div class="resume-item">
