--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Borges</a></h1>
+        <h1 class="text-light"><a href="index.html">João Víctor</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://web.facebook.com/JoaoViictorRocha/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/_borgim" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
@@ -69,7 +69,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>João Víctor Borges Rocha</h1>
+      <h1>João Víctor</h1>
       <p>I'm <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
     </div>
   </section><!-- End Hero -->
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>Sobre</h2>
-          <p>Olá meu nome é João Víctor trabalho na área de Ti há alguns anos mas sempre gostei de programação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar o pontapé inicial neste universo.</p>
+          <p>Olá meu nome é João Víctor trabalho na área de Ti há alguns anos mas sempre gostei de progamação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
         </div>
 
         <div class="row">
@@ -97,10 +97,10 @@
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Data de Nascimento:</strong> <span>11 Março 1998</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Data de Nascimento:</strong> <span>13 Março 1998</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://borjao.github.io/Meu-site/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 61986511913</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Brasília, DF.</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Brásilia, DF.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
@@ -178,9 +178,9 @@
           <div class="col-lg-6" data-aos="fade-up">
 
             <div class="progress">
-              <span class="skill">HTML <i class="val">40%</i></span>
+              <span class="skill">HTML <i class="val">50%</i></span>
               <div class="progress-bar-wrap">
-                <div class="progress-bar" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100"></div>
+                <div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
 
@@ -256,7 +256,7 @@
             <div class="resume-item">
               <h4>Análise e desenvolvimento de sistemas.</h4>
               <h5>2021 - Até o presente momento</h5>
-              <p><em>Estácio, Brasília.</em></p>
+              <p><em>Estácio, Brásilia.</em></p>
               <p>Análise de sistemas é a atividade que tem como finalidade a realização de estudos de processos a fim de encontrar o melhor caminho racional para que a informação possa ser processada. Os analistas de sistemas estudam os diversos sistemas existentes entre hardwares, softwares e o usuário final.</p>
             </div>
             <div class="resume-item">
