--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">João Víctor Borges Rocha</a></h1>
+        <h1 class="text-light"><a href="index.html">Borges</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="https://web.facebook.com/JoaoViictorRocha/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/_borgim" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
@@ -69,7 +69,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Borges</h1>
+      <h1>João Víctor Borges Rocha</h1>
       <p>I'm <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
     </div>
   </section><!-- End Hero -->
