--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <nav id="navbar" class="nav-menu navbar">
         <ul>
           <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#Sobre" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
-          <li><a href="#resumo" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumo</span></a></li>
-          <li><a href="#contato" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contato</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>Sobre</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resumo</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contato</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -69,7 +69,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>João Víctor Borges Rocha</h1>
+      <h1>João Víctor Borges Rocha </h1>
       <p>I'm <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
     </div>
   </section><!-- End Hero -->
