--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>João Víctor Borges Rocha </h1>
-      <p>I'm <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
+      <p>Eu sou <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
     </div>
   </section><!-- End Hero -->
 
