--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>João Víctor Borges Rocha </h1>
-      <p>Eu sou <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
+      <p>Eu sous <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -236,7 +236,7 @@
 
         <div class="section-title">
           <h2>Resumo</h2>
-          <p>Aberto a novas experiências no mercado de trabalho.</p>
+          <p>Aberto a novas experiências no mercado de trabalho.Amo a lueny</p>
         </div>
 
         <div class="row">
