--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
         <div class="section-title">
           <h2>Resumo</h2>
-          <p>Aberto a novas experiências no mercado de trabalho.Amo a lueny</p>
+          <p>Aberto a novas experiências no mercado de trabalho.</p>
         </div>
 
         <div class="row">
