--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>Sobre</h2>
-          <p>Olá meu nome é João Víctor trabalho na área de Ti há alguns anos mas sempre gostei de programação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
+          <p>Olá meu nome é Filipe trabalho na área de Ti há alguns anos mas sempre gostei de programação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
         </div>
 
         <div class="row">
@@ -131,7 +131,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1" data-purecounter-duration="1" class="purecounter">1</span>
+              <span data-purecounter-start="0" data-purecounter-end="2" data-purecounter-duration="1" class="purecounter">1</span>
               <p><strong>Clientes felizes</strong> </p>
             </div>
           </div>
@@ -147,7 +147,7 @@
           <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
             <div class="count-box">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="60" data-purecounter-duration="1" class="purecounter">1</span>
+              <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter">1</span>
               <p><strong>Horas de suporte</strong></p>
             </div>
           </div>
