--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>Sobre</h2>
-          <p>Olá meu nome é Pedro Henrique trabalho na área de Ti há alguns anos mas sempre gostei de programação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
+          <p>Olá meu nome é Joao Víctor trabalho na área de Ti há alguns anos mas sempre gostei de programação e tive interesse em migrar para área de ADS por isso dei inicio a um processo para realizar este desejo e me matriculei na formação de Análise e desenvolvimento de sistemas para começar dar o pontapé inicial neste universo.</p>
         </div>
 
         <div class="row">
