--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                 </ul>
               </div>
             </div>
-            
+
           </div>
         </div>
 
@@ -266,10 +266,10 @@
               <p>Cabo da ativa remunerada.</p>
             </div>
           </div>
-              </ul>
-            </div>
-          </div>
+          </ul>
         </div>
+      </div>
+      </div>
 
       </div>
     </section><!-- End Resume Section -->
@@ -327,13 +327,13 @@
       <div class="copyright">
         &copy; Copyright <strong><span>Borges</span></strong>
       </div>
-      <div class="credits">
+      <!-- <div class="credits">
         <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <!-- You can delete the links only if you purchased the pro version. -->
+      <!-- Licensing information: https://bootstrapmade.com/license/ -->
+      <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
+      <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+    </div>
     </div>
   </footer><!-- End  Footer -->
 
