--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
               <div class="col-lg-6">
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Data de Nascimento:</strong> <span>11 Março 1998</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <a href="https://borjao.github.io/Meu-site/"></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>https://borjao.github.io/Meu-site/</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 61986511913</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Brasília, DF.</span></li>
                 </ul>
