--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>João Víctor Borges Rocha</h1>
-      <p>Eu sou <span class="typed" data-typed-items=" Programador Web Jr, Militar."></span></p>
+      <p>Eu sou <span class="typed" data-typed-items=" Programador Web Jr!."></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -99,14 +99,14 @@
                 <ul>
                   <li><i class="bi bi-chevron-right"></i> <strong>Data de Nascimento:</strong> <span>11 Março 1998</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong><span>https://borjao.github.io/Meu-site/</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 61986511913</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Telefone:</strong> <span>+55 61999487507</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Cidade:</strong> <span>Brasília, DF.</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>23</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Grau:</strong> <span>Junior</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Idade:</strong> <span>24</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Grau:</strong> <span>Estudante</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>john.bsb11@gmail.com</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Disponível</span></li>
                 </ul>
