--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>João Víctor Borges Rocha</h1>
+      <h1>João Víctor</h1>
       <p>Eu sou <span class="typed" data-typed-items=" Programador Web Jr!."></span></p>
     </div>
   </section><!-- End Hero -->
