--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="social-links mt-3 text-center">
           <a href="https://web.facebook.com/JoaoViictorRocha/" class="facebook" target="_blank"><i class="bx bxl-facebook"></i></a>
           <a href="https://www.instagram.com/_borgim" class="instagram" target="_blank"><i class="bx bxl-instagram"></i></a>
-          <a href="https://api.whatsapp.com/send?phone=5561986511913&text=Ol%C3%A1%20Jõao!" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://api.whatsapp.com/send?phone=5561999487507&text=Ol%C3%A1%20Jõao!" class="whatsapp" target="_blank"><i class="bx bxl-whatsapp"></i></a>
           <a href="https://www.linkedin.com/in/borgim/" class="linkedin" target="_blank"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -247,7 +247,7 @@
               <p><em>Programador Web Jr, em busca de novas oportunidades.</em></p>
               <ul>
                 <li>Brasília, DF</li>
-                <li>(61) 98651-1913</li>
+                <li>(61) 99948-7507</li>
                 <li>john.bsb11@gmail.com</li>
               </ul>
             </div>
@@ -328,7 +328,7 @@
         &copy; Copyright <strong><span>Borges</span></strong>
       </div>
       <!-- <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
+        //<!-- All the links in the footer should remain intact. -->
       <!-- You can delete the links only if you purchased the pro version. -->
       <!-- Licensing information: https://bootstrapmade.com/license/ -->
       <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/iportfolio-bootstrap-portfolio-websites-template/ -->
