--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <div class="row">
                 <div class="form-group col-md-6">
                   <label for="name">Seu nome</label>
-                  <input type="text" name="name" class="form-control" id="name" required>
+                  <input type="text" name="nome" class="form-control" id="name" required>
                 </div>
                 <div class="form-group col-md-6">
                   <label for="name">Seu email</label>
@@ -299,11 +299,11 @@
               </div>
               <div class="form-group">
                 <label for="name">Assunto</label>
-                <input type="text" class="form-control" name="subject" id="subject" required>
+                <input type="text" class="form-control" name="assunto" id="subject" required>
               </div>
               <div class="form-group">
                 <label for="name">Mensagem</label>
-                <textarea class="form-control" name="message" rows="10" required></textarea>
+                <textarea class="form-control" name="mensagem" rows="10" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
